--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <h1 id="your_info"></h1>
     <script type="text/javascript" src="js/script.js"></script>
 </body>
 
